--- a/index.html
+++ b/index.html
@@ -34,21 +34,9 @@
 
 		if(isset($_POST["formenvoi"])){
 			$prenom =$_POST['prenom'];
-			$nom=$_POST['nom'];
-			$age=$_POST['age'];
-			$email=$_POST['email'];
-			$adresse=$_POST['adresse'];
 
-			echo "Vous avez était enregistré en tant que ".$prenom." ".$nom;
+			echo "Vous avez était enregistré en tant que ".$prenom;
 			echo "<br>";
-			echo "Vous âge est donc de ".$age;
-			echo "<br>";
-			echo "Nous pourrons vous contacter à cette e-mail".$email;
-			echo "<br>";
-			echo "Vous habitez à cette adresse : ".$adresse;
-
-
-
 		}
 	?>
 	</div>
