--- a/index.html
+++ b/index.html
@@ -26,19 +26,33 @@
 			</div>
 		</div>
 	</div>
-
 	</form>
+    <script>
+        document.getElementById("myForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Empêcher le formulaire de se soumettre normalement
+            
+            var prenom = document.getElementById("prenom").value; // Récupérer la valeur de l'input "prenom"
+            
+            var xhr = new XMLHttpRequest();
+            var url = "https://isborishere-rhwfxvev7q-ew.a.run.app/isBorisHere";
+            xhr.open("POST", url, true);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var json = JSON.parse(xhr.responseText);
+                    console.log(json);
+                }
+            };
+            var data = JSON.stringify({
+                "usage": "is_here",
+                "name": prenom // Utiliser la valeur de l'input "prenom" dans la requête
+            });
+            xhr.send(data);
+        });
+    </script>
 
 	<div class="texte">
-	<?php
 
-		if(isset($_POST["formenvoi"])){
-			$prenom =$_POST['prenom'];
-
-			echo "Vous avez était enregistré en tant que ".$prenom;
-			echo "<br>";
-		}
-	?>
 	</div>
 
 </body>
