--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
                 var url = "https://isborishere-rhwfxvev7q-ew.a.run.app/isBorisHere";
                 xhr.open("POST", url, true);
                 xhr.setRequestHeader("Content-Type", "application/json");
+				xhr.setRequestHeader("Accept", "*/*"); // Ajouter l'en-tête Accept pour indiquer le type de contenu accepté	
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState === 4 && xhr.status === 200) {
                         var json = JSON.parse(xhr.responseText);
                         console.log(json);
-                    }
+                    }else{
+						console.error("Erreur de la requête : " + xhr.status);
+					}
                 };
                 var data = JSON.stringify({
                     "usage": "is_here",
