--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 var url = "https://isborishere-rhwfxvev7q-ew.a.run.app/isBorisHere";
                 xhr.open("POST", url, true);
                 xhr.setRequestHeader("Content-Type", "application/json");
+				xhr.setRequestHeader("Access-Control-Allow-Origin","*")
 				xhr.setRequestHeader("Accept", "*/*"); // Ajouter l'en-tête Accept pour indiquer le type de contenu accepté	
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState === 4 && xhr.status === 200) {
