--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<form method="post">
 	<div class="container">
 		<h2>isBorisHere</h2>
 		<div class="row100">
@@ -23,11 +22,10 @@
 			</div>
 		<div class="row100">
 			<div class="col">
-				<input type="submit" id="formenvoi" name="formenvoi"value="Envoyer" class="bouton_submit">
+				<input type="button" id="formenvoi" name="formenvoi" value="Envoyer" class="bouton_submit">
 			</div>
 		</div>
 	</div>
-	</form>
 	<div class="texte">
 
 	</div>
