--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 		<h2><span>isBorisHere</span></h2>
 		<div class="row100">
 			<div class="col">
+        <form autocomplete="off" method="post" action="">
+        <div class="autocomplete" style="width:300px;">
 				<div class="inputBox">
-					<input type="text" name="prenom" id="prenom"required="required">
-					<span class="text">Name</span>
-					<span class="line"></span>
+					  <input type="text" name="prenom" id="prenom"required="required">
+					  <span class="text">Name</span>
+					  <span class="line"></span>
+        </div>
 				</div>
+        </form>
 			</div>
 		<div class="row100">
 			<div class="col">
