--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="
 	width=device-width, initial-scale=1.0">
-	<title>isBorisHere</title>
+	<title>isTeacherHere</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="container">
-		<h2><span>isBorisHere</span></h2>
+		<h2><span>isTeacherHere</span></h2>
 		<div class="row100">
 			<div class="col">
         <form autocomplete="off" method="post" action="">
